[package]
name = "libc"
version = "0.0.1"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-std-workspace-core = { version = "1", optional = true }

[features]
rustc-dep-of-std = ["rustc-std-workspace-core"]
