[package]
name = "libc-nnsdk"
version = "0.3.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ultimate-research/libc-nnsdk"
description = "Rust bindings for the parts of libc exposed by nnsdk, intended to be a in-place replacement for standard Rust libc bindings"
documentation = "https://docs.rs/libc-nnsdk"

[lib]
name = "libc"
path = "src/lib.rs"

[dependencies]
rustc-std-workspace-core = { version = "1", optional = true }

[features]
rustc-dep-of-std = ["rustc-std-workspace-core"]
